# geotime

client/: .env  .gitignore  docker-compose.yml  env_example  package-lock.json  package.json  vite.config.ts
client/src/components/: withCameraStream.tsx  withResStream.tsx
client/src/components/DetectionImg/: DetectionAreaSpawner.tsx  (+1 more)
client/src/hooks/: useProductState.ts
client/src/layouts/: MainLayout.tsx
client/src/pages/: History.tsx  HomePage.tsx  ProductPage.tsx
client/src/services/: ReportService.ts
client/src/types/: ICamera.ts  IReport.ts
client/src/utils/: reports.ts
server/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  ecosystem.config.js  env_example  kol_ecosystem.config.js  parser.py  pyproject.toml  run.config.js  seg.py
server/clients/: Dockerfile  camera.py  job_manager.py  model_manager.py  redis_manager.py  seg_client.py  video_process.py  wits_manager.py
server/helpers/: async_rqueue.py  rqueue.py
server/src/: main.py
server/src/config/: config.py
server/src/db/: crud.py  database.py  models.py
server/src/db/schemas/: camera.py  job.py  report.py  wits.py
server/src/routes/: job.py  report.py  video.py  work_data.py
server/src/static/: report.xlsx
server/src/tasks/: tasks.py  values.py
server/src/utils/: calculates.py  saver.py
server/src/workers/: worker_predict.py  worker_report.py  worker_wits.py
server/src_video/: main.py
server/src_video/routes/: video.py
server/src_websockets/: main.py
server/src_websockets/routes/: ws.py
server/src_wits/: worker_wits.py
(+23 files in other folders)
